src/app/pages/bes3/activities/bes3-activities.component.scss
@use "../../../../styles";
@use "../../../../sizes";

.full-width {
  width: 100%;
}

//
// Overlays
//

$overlay-margin: 32px;
$inner-container-height: 160px;

.overlay-left {
  z-index: 1;
  position: absolute;
  top: var(--toolbar-height);
  left: 0;
  margin: $overlay-margin;
  box-shadow:
    0 3px 1px -2px rgba(0, 0, 0, 0.2),
    0px 2px 2px 0px rgba(0, 0, 0, 0.14),
    0px 1px 5px 0px rgba(0, 0, 0, 0.12);
  max-height: calc(100vh - var(--toolbar-height) - (2 * $overlay-margin));

  @media #{sizes.$breakpoint-large} {
    width: 450px;
  }

  @media #{sizes.$breakpoint-medium} {
    width: 450px;
  }

  @media #{sizes.$breakpoint-small} {
    width: calc(100% - 60px);
  }
}

.map-container {
  height: calc(100vh - var(--toolbar-height) - $inner-container-height);
  width: 100%;
}

.heading {
  height: $inner-container-height;
}

.refresh-button {
  align-self: end;
}

.drawer-container {
  height: calc(100vh - var(--toolbar-height));
}

.map-container,
.chart-container {
  flex: 1 1 50%;
  min-width: 0;
  width: 100%;
}

@media #{sizes.$breakpoint-small} {
  $overlay-margin: 32px;
  $inner-container-height: 216px;

  .overlay-left {
    z-index: 1;
    position: absolute;
    top: var(--toolbar-height);
    left: 0;
    margin: $overlay-margin;
    box-shadow:
      0 3px 1px -2px rgba(0, 0, 0, 0.2),
      0px 2px 2px 0px rgba(0, 0, 0, 0.14),
      0px 1px 5px 0px rgba(0, 0, 0, 0.12);
    max-height: calc(100vh - var(--toolbar-height) - (2 * $overlay-margin));

    @media #{sizes.$breakpoint-large} {
      width: 450px;
    }

    @media #{sizes.$breakpoint-medium} {
      width: 450px;
    }

    @media #{sizes.$breakpoint-small} {
      width: calc(100% - 60px);
    }
  }

  .map-container {
    height: calc(100vh - var(--toolbar-height) - $inner-container-height);
    width: 100%;
  }

  .heading {
    height: $inner-container-height;
  }

  .drawer-container {
    height: calc(100vh - var(--toolbar-height));
  }
}

::ng-deep .mat-expansion-panel-body {
  padding: 0 0 16px !important;
}

.drawer {
  width: 560px;
  max-width: 90vw;
}

.activities-list,
.activities-paginator {
  margin: 16px 0 16px;
}

.activity-summary {
  padding: 0 24px 0;
}

.container {
  padding: 0;
}

mat-card {
  cursor: pointer;
}

.grey {
  filter: grayscale(100%);
}

.activity-image {
  border-radius: 8px;
  width: 100%;
}

.hidden {
  height: 0;
  visibility: hidden;
}

.map-container-recording {
  position: absolute;
  left: -9999px;
  width: 996px;
  height: 996px;
  visibility: hidden;
}

.activities-fly-over-recording {
  width: 996px;
  height: 996px;
}

